# agentic

./: .env.example  .gitignore  404.html  LICENSE  MANIFEST.in  Qt.conf  README.md  actor_manager.py  agent_launcher.py  agentic_cli.py  icon.icns  index.html  meetings.db  mkdocs.yml  path_helpers.py  pyproject.toml  runtime_hook.py  setup.py  sitemap.xml  static_dashboard_server.py  tree.txt  versions.json
.github/workflows/: ci.yaml  prepare-update-version.yaml  publish-docs.yaml  publish-package-to-pypi.yaml  test-and-lint.yaml
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/FLOWS/: index.html
0.1.3/Internals/: index.html
0.1.3/Settings/: index.html
0.1.3/agent-memory/: index.html
0.1.3/building-agents/: index.html
0.1.3/core-concepts/: index.html
0.1.3/data-model/: index.html
0.1.3/example-agents/: index.html
0.1.3/getting-started/: index.html
0.1.3/interacting-with-agents/: index.html
0.1.3/planning-agents/: index.html
0.1.3/rag-support/: index.html
0.1.3/tools/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/FLOWS/: index.html
0.2.0/Internals/: index.html
0.2.0/Settings/: index.html
0.2.0/agent-memory/: index.html
0.2.0/building-agents/: index.html
0.2.0/core-concepts/: index.html
0.2.0/data-model/: index.html
0.2.0/example-agents/: index.html
0.2.0/flows/: index.html
0.2.0/getting-started/: index.html
0.2.0/interacting-with-agents/: index.html
0.2.0/internals/: index.html
0.2.0/planning-agents/: index.html
0.2.0/rag-support/: index.html
0.2.0/settings/: index.html
0.2.0/tools/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/FLOWS/: index.html
0.2.1/Internals/: index.html
0.2.1/Settings/: index.html
0.2.1/agent-memory/: index.html
0.2.1/building-agents/: index.html
0.2.1/core-concepts/: index.html
0.2.1/data-model/: index.html
0.2.1/example-agents/: index.html
0.2.1/getting-started/: index.html
0.2.1/interacting-with-agents/: index.html
0.2.1/planning-agents/: index.html
0.2.1/rag-support/: index.html
0.2.1/search/: search_index.json
0.2.1/tools/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/FLOWS/: index.html
0.2.2/Internals/: index.html
0.2.2/Settings/: index.html
0.2.2/agent-memory/: index.html
0.2.2/building-agents/: index.html
0.2.2/core-concepts/: index.html
0.2.2/data-model/: index.html
0.2.2/example-agents/: index.html
0.2.2/getting-started/: index.html
0.2.2/glossary/: index.html
0.2.2/interacting-with-agents/: index.html
0.2.2/planning-agents/: index.html
0.2.2/rag-support/: index.html
0.2.2/search/: search_index.json
0.2.2/tools/: index.html
0.2.3/: 404.html  index.html  sitemap.xml
0.2.3/FLOWS/: index.html
0.2.3/Internals/: index.html
0.2.3/Settings/: index.html
0.2.4/: 404.html  index.html  sitemap.xml
0.2.5/: 404.html  index.html  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  sitemap.xml
0.3.2/: 404.html  index.html  sitemap.xml
0.3.3/: 404.html  index.html  sitemap.xml
AGENTIC_MANIFESTO/: index.html
AGENT_MEMORY/: index.html
Building_Agents/: index.html
CLI/: index.html
DATA_MODEL/: index.html
Dashboard/: index.html
Debugging/: index.html
EVENTS/: index.html
Events/: index.html
Examples/: index.html
FLOWS/: index.html
Flows/: index.html
Internals/: index.html
Models/: index.html
PROJECT_STRUCTURE/: index.html
PlanningAgents/: index.html
REST_API/: index.html
Rag/: index.html
RestApiTool/: index.html
SETTINGS/: index.html
Settings/: index.html
Teams/: index.html
ToolLibrary/: index.html
Tools/: index.html
agent-memory/: index.html
building-agents/: index.html
core-concepts/: index.html
data-model/: index.html
deployment/: .dockerignore  .env.example  Dockerfile  Dockerfile.api  Dockerfile.dashboard  README.md  docker-entrypoint.sh
dev/: 404.html  index.html  sitemap.xml
docs/: AGENTIC_MANIFESTO.md  AGENT_MEMORY.md  Building_Agents.md  CLI.md  DATA_MODEL.md  Dashboard.md  Debugging.md  EVENTS.md  Examples.md  FLOWS.md  Internals.md  Models.md  PROJECT_STRUCTURE.md  PlanningAgents.md  REST_API.md  RestApiTool.md  SETTINGS.md  Settings.md  Teams.md  ToolLibrary.md  Tools.md  example-agents.md  getting-started.md  glossary.md  index.md  loop_prompt.md  planning-agents.md  rag-support.md
example-agents/: index.html
examples/: README.md  __init__.py  agentic_oracle.py  airbnb_calendar_agent.py  basic_agent.py  basic_agent_reasoning.py  database_agent.py  demo1.py  dynamic.py  dynamic_tools_agent.py  github.py  handoff_demo.py  human_in_the_loop.py  langchain_browser_agent.py  march_madness.py  mcp_demo.py  mcp_echo.py  meeting_notetaker.py  news_demo.py  operator_agent.py  oss_deep_research.prompts.yaml  oss_deep_research.py  oss_deep_util.py  oss_operator.py  people_researcher.py  podcast.prompts.yaml  podcast.py  podcast_long.py  standup_agent.py  testing.py  tool_builder.py
flows/: index.html
getting-started/: index.html
interacting-with-agents/: index.html
planning-agents/: index.html
rag-support/: index.html
scripts/: build_app_py2app.sh  build_copy_missing_modules.sh  build_dmg.sh  dmg_settings.py  icon-creation  setup.py
search/: search_index.json
tests/: conftest.py  example_test.py  model_mock.py  test_automatic_tools.py  test_basics.py  test_callbacks.py  test_context_window.py  test_database_tool.py  test_file_cache.py  test_github_tool.py  test_langchain_tools.py  test_linkedin_tool.py  test_llm_helper.py  test_mcp.py  test_mock_llm.py  test_oauth_tool.py  test_rag_operations.py  test_rag_tool.py  test_ragtool.py  test_repl_commands.py  test_response_model.py  test_run_logging_core.py  test_run_logging_integration.py  test_secrets.py  test_settings.py  test_template_discovery.py  test_template_path_function.py  test_thread_logging_core.py  test_thread_logging_integration.py  test_token_usage.py  test_tool_logging.py  test_tool_use.py  test_tools_init.py  test_tools_registry.py  test_trim_messages.py  test_vendor_agents.py
tools/: index.html
(+811 files in other folders)
